--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,63 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+}
+#root {
+  min-height: 100vh;
+  max-height: 100vh;
+  min-width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.gamearea {
+  width: 85%
+}
+
+.chatbox {
+  width: 15%;
+  max-height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.chatarea {
+  display: flex;
+  flex-direction: column-reverse;
+  overflow-y: scroll;
+  height: 100%;
+}
+
+div {
+  border: 1px solid black;
+}
+
+input {
+  margin: 5px;
+  padding: 5px;
+}
+
+.circle {
+  width: 100%;
+  height: 100%;
+  user-select: none;
+  color: white;
+  text-align: center;
+  border: none;
+  border-radius: 50%;
+  position: absolute;
+}
+
+button {
+  position: absolute;
+  z-index: 1;
+  margin-left: 20px;
+  margin-top: 20px;
+  background-color: purple;
+  color: white;
+  border-style: none;
+  border-radius: 4px;
+  padding: 8px;
 }
